--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,18 +14,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-01 Fri 11:18]
+#+CAPTION: Clock summary at [2017-09-01 Fri 11:28]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *3:16* |      |      | 100.0 |
+| *Total time*                                                                | *3:25* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 3:16   |      |      | 100.0 |
-| Active                                                                      |        | 3:16 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:44 |  22.4 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:30 |  15.3 |
-| COMPLETED Remove object types in yarn                                       |        |      | 0:52 |  26.5 |
-| COMPLETED Clean-up readme                                                   |        |      | 1:06 |  33.7 |
+| Stories                                                                     | 3:25   |      |      | 100.0 |
+| Active                                                                      |        | 3:25 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:44 |  21.5 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:30 |  14.6 |
+| COMPLETED Remove object types in yarn                                       |        |      | 0:52 |  25.4 |
+| COMPLETED Clean-up readme                                                   |        |      | 1:15 |  36.6 |
 | STARTED Rename transformers to adapters                                     |        |      | 0:04 |   2.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -111,6 +111,7 @@ could probably replace the enumeration with a simple flag
 
 *** COMPLETED Clean-up readme                                         :story:
     CLOSED: [2017-09-01 Fri 11:09]
+    CLOCK: [2017-09-01 Fri 11:19]--[2017-09-01 Fri 11:28] =>  0:09
     CLOCK: [2017-09-01 Fri 11:10]--[2017-09-01 Fri 11:18] =>  0:08
     CLOCK: [2017-09-01 Fri 10:11]--[2017-09-01 Fri 11:09] =>  0:58
 
