--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,19 +14,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-01 Fri 11:28]
+#+CAPTION: Clock summary at [2017-09-01 Fri 11:44]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *3:25* |      |      | 100.0 |
+| *Total time*                                                                | *3:40* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 3:25   |      |      | 100.0 |
-| Active                                                                      |        | 3:25 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:44 |  21.5 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:30 |  14.6 |
-| COMPLETED Remove object types in yarn                                       |        |      | 0:52 |  25.4 |
-| COMPLETED Clean-up readme                                                   |        |      | 1:15 |  36.6 |
-| STARTED Rename transformers to adapters                                     |        |      | 0:04 |   2.0 |
+| Stories                                                                     | 3:40   |      |      | 100.0 |
+| Active                                                                      |        | 3:40 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:44 |  20.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:30 |  13.6 |
+| COMPLETED Remove object types in yarn                                       |        |      | 0:52 |  23.6 |
+| COMPLETED Clean-up readme                                                   |        |      | 1:15 |  34.1 |
+| STARTED Rename transformers to adapters                                     |        |      | 0:19 |   8.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -123,6 +123,7 @@ file:
 - make build instructions a bit less repetitive
 
 *** STARTED Rename transformers to adapters                           :story:
+    CLOCK: [2017-09-01 Fri 11:29]--[2017-09-01 Fri 11:44] =>  0:15
     CLOCK: [2017-08-31 Thu 09:02]--[2017-08-31 Thu 09:06] =>  0:04
 
 In the past we used the term "transformer" to mean a class that
