--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,19 +14,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-01 Fri 11:47]
+#+CAPTION: Clock summary at [2017-09-01 Fri 11:55]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *3:42* |      |      | 100.0 |
+| *Total time*                                                                | *3:49* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 3:42   |      |      | 100.0 |
-| Active                                                                      |        | 3:42 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:44 |  19.8 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:30 |  13.5 |
-| COMPLETED Remove object types in yarn                                       |        |      | 0:52 |  23.4 |
-| COMPLETED Clean-up readme                                                   |        |      | 1:15 |  33.8 |
-| STARTED Rename transformers to adapters                                     |        |      | 0:21 |   9.5 |
+| Stories                                                                     | 3:49   |      |      | 100.0 |
+| Active                                                                      |        | 3:49 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:44 |  19.2 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:30 |  13.1 |
+| COMPLETED Remove object types in yarn                                       |        |      | 0:52 |  22.7 |
+| COMPLETED Clean-up readme                                                   |        |      | 1:15 |  32.8 |
+| COMPLETED Rename transformers to adapters                                   |        |      | 0:28 |  12.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -122,7 +122,9 @@ file:
 - bintray binaries are no longer experimental as we've been using them
 - make build instructions a bit less repetitive
 
-*** STARTED Rename transformers to adapters                           :story:
+*** COMPLETED Rename transformers to adapters                         :story:
+    CLOSED: [2017-09-01 Fri 11:55]
+    CLOCK: [2017-09-01 Fri 11:48]--[2017-09-01 Fri 11:55] =>  0:07
     CLOCK: [2017-09-01 Fri 11:45]--[2017-09-01 Fri 11:47] =>  0:02
     CLOCK: [2017-09-01 Fri 11:29]--[2017-09-01 Fri 11:44] =>  0:15
     CLOCK: [2017-08-31 Thu 09:02]--[2017-08-31 Thu 09:06] =>  0:04
