--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,28 +14,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-08 Fri 23:08]
+#+CAPTION: Clock summary at [2017-09-09 Sat 09:27]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *18:51* |       |      | 100.0 |
+| *Total time*                                                                | *19:23* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 18:51   |       |      | 100.0 |
-| Active                                                                      |         | 18:51 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   3.9 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:22 |   7.3 |
-| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   4.6 |
-| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   6.6 |
-| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   2.5 |
-| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  12.9 |
-| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |   9.6 |
-| COMPLETED Tailor dogen models                                               |         |       | 0:21 |   1.9 |
-| COMPLETED Rename yarn concepts                                              |         |       | 7:49 |  41.5 |
+| Stories                                                                     | 19:23   |       |      | 100.0 |
+| Active                                                                      |         | 19:23 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   3.8 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:22 |   7.1 |
+| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   4.5 |
+| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   6.4 |
+| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   2.4 |
+| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  12.6 |
+| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |   9.4 |
+| COMPLETED Tailor dogen models                                               |         |       | 0:21 |   1.8 |
+| COMPLETED Rename yarn concepts                                              |         |       | 7:49 |  40.3 |
 | COMPLETED Remove extra copying in mapper                                    |         |       | 0:05 |   0.4 |
-| COMPLETED Investigate the JSON break on Northwind model                     |         |       | 0:57 |   5.0 |
-| COMPLETED Rename ODB parameters                                             |         |       | 0:11 |   1.0 |
+| COMPLETED Investigate the JSON break on Northwind model                     |         |       | 0:57 |   4.9 |
+| COMPLETED Rename ODB parameters                                             |         |       | 0:11 |   0.9 |
 | COMPLETED Investigate usage of origin type                                  |         |       | 0:15 |   1.3 |
-| STARTED Add canonical archetype support to yarn                             |         |       | 0:17 |   1.5 |
+| STARTED Add canonical archetype support to yarn                             |         |       | 0:49 |   4.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -564,6 +564,7 @@ Actually, we need way to figure out which types to generate, and which
 types are references. So we still need this flag.
 
 *** STARTED Add canonical archetype support to yarn                   :story:
+    CLOCK: [2017-09-09 Sat 08:55]--[2017-09-09 Sat 09:27] =>  0:32
     CLOCK: [2017-09-08 Fri 22:51]--[2017-09-08 Fri 23:08] =>  0:17
 
 We need to add a new attribute in context which captures the canonical
@@ -586,12 +587,22 @@ Notes:
   archetype represents the "key" definition of the element. It just so
   happens that this function has a use in identifying the files to
   include.
+- actually the container must be meta-type to facet to canonical
+  artefact. Also, there is no particularly good reason for this to be
+  a element property. It is, in fact, a meta-element concept, because
+  it is the same for all meta-elements. We should just add this
+  container to the context.
 
 Tasks:
 
 - add a map from name id to meta-name id in intermediate model.
 - add a map from meta name id to map of canonical archetype to
   archetype location.
+
+*** Create yarn options                                               :story:
+
+We need to replace the dependency on the options model and create a
+stand alone yarn options class.
 
 *** Move enablement into yarn                                         :story:
 
