--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,28 +14,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-09 Sat 09:27]
+#+CAPTION: Clock summary at [2017-09-09 Sat 16:08]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *19:23* |       |      | 100.0 |
+| *Total time*                                                                | *21:41* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 19:23   |       |      | 100.0 |
-| Active                                                                      |         | 19:23 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   3.8 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:22 |   7.1 |
-| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   4.5 |
-| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   6.4 |
-| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   2.4 |
-| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  12.6 |
-| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |   9.4 |
-| COMPLETED Tailor dogen models                                               |         |       | 0:21 |   1.8 |
-| COMPLETED Rename yarn concepts                                              |         |       | 7:49 |  40.3 |
+| Stories                                                                     | 21:41   |       |      | 100.0 |
+| Active                                                                      |         | 21:41 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   3.4 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:22 |   6.3 |
+| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   4.0 |
+| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   5.8 |
+| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   2.2 |
+| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  11.2 |
+| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |   8.4 |
+| COMPLETED Tailor dogen models                                               |         |       | 0:21 |   1.6 |
+| COMPLETED Rename yarn concepts                                              |         |       | 7:49 |  36.0 |
 | COMPLETED Remove extra copying in mapper                                    |         |       | 0:05 |   0.4 |
-| COMPLETED Investigate the JSON break on Northwind model                     |         |       | 0:57 |   4.9 |
-| COMPLETED Rename ODB parameters                                             |         |       | 0:11 |   0.9 |
-| COMPLETED Investigate usage of origin type                                  |         |       | 0:15 |   1.3 |
-| STARTED Add canonical archetype support to yarn                             |         |       | 0:49 |   4.2 |
+| COMPLETED Investigate the JSON break on Northwind model                     |         |       | 0:57 |   4.4 |
+| COMPLETED Rename ODB parameters                                             |         |       | 0:11 |   0.8 |
+| COMPLETED Investigate usage of origin type                                  |         |       | 0:15 |   1.2 |
+| STARTED Add canonical archetype support to yarn                             |         |       | 3:07 |  14.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -564,6 +564,8 @@ Actually, we need way to figure out which types to generate, and which
 types are references. So we still need this flag.
 
 *** STARTED Add canonical archetype support to yarn                   :story:
+    CLOCK: [2017-09-09 Sat 15:40]--[2017-09-09 Sat 16:08] =>  0:28
+    CLOCK: [2017-09-09 Sat 13:49]--[2017-09-09 Sat 15:39] =>  1:50
     CLOCK: [2017-09-09 Sat 08:55]--[2017-09-09 Sat 09:27] =>  0:32
     CLOCK: [2017-09-08 Fri 22:51]--[2017-09-08 Fri 23:08] =>  0:17
 
@@ -587,22 +589,68 @@ Notes:
   archetype represents the "key" definition of the element. It just so
   happens that this function has a use in identifying the files to
   include.
-- actually the container must be meta-type to facet to canonical
-  artefact. Also, there is no particularly good reason for this to be
-  a element property. It is, in fact, a meta-element concept, because
-  it is the same for all meta-elements. We should just add this
-  container to the context.
+- before we focus too much on adding canonical archetype support to
+  yarn, its important to understand just exactly how it gets used. We
+  are doing far too many look-ups at present, given the information
+  that is known. Canonical archetypes are a way to refer to a type for
+  a given formatter without knowing who exactly that formatter
+  is. This is useful for example when we need to include the
+  definition of a type but we do not know if its an enum, object
+  etc. So, at present, we proceed as follows:
+  - for a given name, we first resolve the archetype; if its not
+    canonical nothing happens. If its canonical, it gets resolved into
+    a concrete archetype.
+  - we then find the element associated with the name and get its
+    properties. If the archetype is not enabled, there is nothing to
+    do.
+  - if its enabled, we then need to look for its directives group. If
+    none exist, then there is nothing to do.
+
+  The gist of this exercise is that we could get away with a single
+  look-up; for this we would need to map the canonical directives
+  group as well. Actually this will not work because an archetype can
+  be disabled on one element but enabled on another, so we need to
+  separate enablement from the directives group. But we certainly can
+  map all the model elements to the meta-model elements and those to
+  the canonical archetypes. So we can have an "enablement manager" of
+  some kind, who consumes a model and the context, and creates a map
+  of element and archetype to bool. Steps:
+  - directive group repository factory needs to insert against the
+    canonical artefact too.
+  - dependencies builder needs to use the original (non-resolved)
+    artefact name.
+  - create a "enablement manager" in yarn that pre-processes the model
+    and creates the da+ta structures as described above (for element
+    id + archetype returns enabled flag)
+  - supply the "enablement manager" to the kernel and from there to
+    the dependencies builder.
+  - at this point, all C++ specific enablement infrastructure can be
+    deleted.
+
+  An even simpler way of looking at this is to generate a set of pairs
+  of strings during enablement transform for all elements + artefacts
+  that are enabled; put that in the endomodel; merge the sets as part
+  of the merger (throwing if duplicates are found). Then supply the
+  set to the dependencies builder somehow (or create a helper in yarn
+  that acts as the enablement manager but is just doing a look-up on
+  the set).
 
 Tasks:
 
-- add a map from name id to meta-name id in intermediate model.
-- add a map from meta name id to map of canonical archetype to
+- add class in annotations to generate the canonical form from a
   archetype location.
-
-*** Create yarn options                                               :story:
-
-We need to replace the dependency on the options model and create a
-stand alone yarn options class.
+- update kernels to return archetype location groups, with canonical
+  archetypes populated.
+- add a set of pairs of strings to endomodel: enabled archetypes for
+  element. Populate it during enablement transform. Add canonical
+  archetype there too.
+- in directive group repository factory, for each archetype that is
+  the canonical archetype, populate its entry too. Remove use of the
+  canonical resolver in dependencies builder.
+- create a class to query the set: "enablement manager"? Instantiate
+  it in C++ kernel and supply it to dependencies builder factory.
+- remove all references of formattables and element properties in
+  dependencies builder.
 
 *** Move enablement into yarn                                         :story:
 
@@ -644,6 +692,8 @@ To do:
 - c# formatter registrar type index map - done.
 - bug in template instantiating: artefact expansions do not seem to
   take kernel into account - done.
+- use new enabled fields.
+- delete all enablement classes in c++ and enabled/overwrite properties.
 
 *Previous Understanding*
 
@@ -651,6 +701,38 @@ We need to make use of the exact same logic as implemented in
 =quilt.cpp= for enablement. Perhaps all of the enablement related
 functionality can be lifted and grafted onto quilt without any major
 changes.
+
+*** Move dependencies into yarn                                       :story:
+
+Actually the dependencies will be generated at the kernel level
+because 99% of the code is kernel specific. However, we need to make
+it an external transform.
+
+Tasks:
+
+- create the locator in the C++ external transform
+- create a dependencies transform that uses the existing include
+  generation code.
+
+*Previous understanding*
+
+It seems all languages we support have some form of "dependencies":
+
+- in c++ these are the includes
+- in c# these are the usings
+- in java these are the imports
+
+So, it would make sense to move these into yarn. The process of
+obtaining the dependencies must still be done in a kernel dependent
+way because we need to build any language-specific structures that the
+dependencies builder requires. However, we can create an interface for
+the dependencies builder in yarn and implement it in each kernel. Each
+kernel must also supply a factory for the builders.
+
+*** Create yarn options                                               :story:
+
+We need to replace the dependency on the options model and create a
+stand alone yarn options class.
 
 *** Code-generate annotations type templates                          :story:
 
@@ -864,33 +946,6 @@ all languages if supplied suitable configuration data. To generalise:
   concept of inclusion path which is not language specific; "relative
   path" and "requires relative path" perhaps? These could be a
   function of archetype location.
-
-*** Move dependencies into yarn                                       :story:
-
-Actually the dependencies will be generated at the kernel level
-because 99% of the code is kernel specific. However, we need to make
-it an external transform.
-
-Tasks:
-
-- create the locator in the C++ external transform
-- create a dependencies transform that uses the existing include
-  generation code.
-
-*Previous understanding*
-
-It seems all languages we support have some form of "dependencies":
-
-- in c++ these are the includes
-- in c# these are the usings
-- in java these are the imports
-
-So, it would make sense to move these into yarn. The process of
-obtaining the dependencies must still be done in a kernel dependent
-way because we need to build any language-specific structures that the
-dependencies builder requires. However, we can create an interface for
-the dependencies builder in yarn and implement it in each kernel. Each
-kernel must also supply a factory for the builders.
 
 *** Generate file paths as a transform                                :story:
 
