--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,28 +14,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-09 Sat 16:08]
+#+CAPTION: Clock summary at [2017-09-09 Sat 20:15]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *21:41* |       |      | 100.0 |
+| *Total time*                                                                | *22:43* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 21:41   |       |      | 100.0 |
-| Active                                                                      |         | 21:41 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   3.4 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:22 |   6.3 |
-| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   4.0 |
-| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   5.8 |
-| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   2.2 |
-| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  11.2 |
-| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |   8.4 |
-| COMPLETED Tailor dogen models                                               |         |       | 0:21 |   1.6 |
-| COMPLETED Rename yarn concepts                                              |         |       | 7:49 |  36.0 |
+| Stories                                                                     | 22:43   |       |      | 100.0 |
+| Active                                                                      |         | 22:43 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   3.2 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:22 |   6.0 |
+| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   3.8 |
+| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   5.5 |
+| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   2.1 |
+| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  10.7 |
+| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |   8.0 |
+| COMPLETED Tailor dogen models                                               |         |       | 0:21 |   1.5 |
+| COMPLETED Rename yarn concepts                                              |         |       | 7:49 |  34.4 |
 | COMPLETED Remove extra copying in mapper                                    |         |       | 0:05 |   0.4 |
-| COMPLETED Investigate the JSON break on Northwind model                     |         |       | 0:57 |   4.4 |
+| COMPLETED Investigate the JSON break on Northwind model                     |         |       | 0:57 |   4.2 |
 | COMPLETED Rename ODB parameters                                             |         |       | 0:11 |   0.8 |
-| COMPLETED Investigate usage of origin type                                  |         |       | 0:15 |   1.2 |
-| STARTED Add canonical archetype support to yarn                             |         |       | 3:07 |  14.4 |
+| COMPLETED Investigate usage of origin type                                  |         |       | 0:15 |   1.1 |
+| STARTED Add canonical archetype support to yarn                             |         |       | 4:09 |  18.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -564,6 +564,8 @@ Actually, we need way to figure out which types to generate, and which
 types are references. So we still need this flag.
 
 *** STARTED Add canonical archetype support to yarn                   :story:
+    CLOCK: [2017-09-09 Sat 19:52]--[2017-09-09 Sat 20:15] =>  0:23
+    CLOCK: [2017-09-09 Sat 19:12]--[2017-09-09 Sat 19:51] =>  0:39
     CLOCK: [2017-09-09 Sat 15:40]--[2017-09-09 Sat 16:08] =>  0:28
     CLOCK: [2017-09-09 Sat 13:49]--[2017-09-09 Sat 15:39] =>  1:50
     CLOCK: [2017-09-09 Sat 08:55]--[2017-09-09 Sat 09:27] =>  0:32
